#25 - extract plugins into a separate modules, extract interfaces and models from core to base module, major rearrangings and dependencies cleanup